# GiftList

./: README.md
client/: package.json  pnpm-lock.yaml
client/src/: main.jsx  styles.js
client/src/components/MerkleTreeWindow/: index.jsx
client/src/components/MerkleTreeWindow/MerkleProof/: index.jsx
client/src/components/TutorialMerkleTree/: style.js
client/src/src/: App.jsx
client/src/src/components/MerkleTreeWindow/: index.jsx  styles.js
client/src/src/components/MerkleTreeWindow/MerkleProof/: index.jsx
client/src/src/components/MerkleTreeWindow/PopupWindow/: index.jsx
client/src/src/components/MerkleTreeWindow/VipList/: index.jsx
client/src/src/components/TutorialMerkleTree/: index.jsx  style.js
client/src/src/utils/: server.js
client/src/utils/: lib.merkletreejs.js  merkleTree.js  vipList.js
server/: package.json  pnpm-lock.yaml
server/src/: index.js  utils.js
serverjs/: package.json
serverjs/src/: index.js
serverpy/: pyproject.toml  server.py
